--- a/src/css/responsive.css
+++ b/src/css/responsive.css
@@ -457,7 +457,7 @@
 
     #home .section4 {
         margin: 0;
-        padding: 20px 5% 40px;
+        padding: 20px 44px 40px;
         border-radius: 0;
     }
 
